AndorsTrail/src/com/gpl/rpg/AndorsTrail/scripting/interpreter/ATScriptParser.java
/* Generated By:JavaCC: Do not edit this line. ATScriptParser.java */
package com.gpl.rpg.AndorsTrail.scripting.interpreter;

import java.io.BufferedReader;
import java.io.StringReader;

public class ATScriptParser implements ATScriptParserConstants {

        public static ATSNode parseScript(String script, ATSLocalVarsHelper localVarRefHelp) throws ParseException {
                StringReader reader = new StringReader(script);
                BufferedReader scriptReader = new BufferedReader(reader);
                ATScriptParser parser = new ATScriptParser(scriptReader);
                try {
                        return parser.parseScope(localVarRefHelp);
                } catch (Exception e) {
                        e.printStackTrace();
                } catch (Error e) {
                        e.printStackTrace();
                }
                return null;
        }

  final public ATSExpression parseScope(ATSLocalVarsHelper localVars) throws ParseException {
        ATSExpression scriptRoot;
        localVars.pushScope();
    scriptRoot = parseScript(localVars);
                localVars.popScope();
                {if (true) return scriptRoot;}
    throw new Error("Missing return statement in function");
  }

  final public ATSExpression parseScript(ATSLocalVarsHelper localVars) throws ParseException {
        ATSExpression scriptRoot, next;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case WHILE:
    case RETURN:
    case MAP:
    case WORLD:
    case ATTACK:
    case PLAYER:
    case ACTOR:
    case ITEM:
    case BOOL:
    case NUM:
    case STRING:
    case IDENTIFIER:
      scriptRoot = construct(localVars);
      next = parseScript(localVars);
                scriptRoot.next = next;
                {if (true) return scriptRoot;}
      break;
    case 0:
      jj_consume_token(0);
                {if (true) return null;}
      break;
    case RBRAC:
      jj_consume_token(RBRAC);
                {if (true) return null;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSExpression construct(ATSLocalVarsHelper localVars) throws ParseException {
        ATSExpression construct;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAP:
    case WORLD:
    case ATTACK:
    case PLAYER:
    case ACTOR:
    case ITEM:
    case BOOL:
    case NUM:
    case STRING:
    case IDENTIFIER:
      construct = associationOrMethodCall(localVars);
                {if (true) return construct;}
      break;
    case IF:
      construct = ifElseConstruct(localVars);
                {if (true) return construct;}
      break;
    case WHILE:
      construct = whileConstruct(localVars);
                {if (true) return construct;}
      break;
    case RETURN:
      construct = returnConstruct(localVars);
                {if (true) return construct;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSExpression associationOrMethodCall(ATSLocalVarsHelper localVars) throws ParseException {
        ATSValueReference assignee;
        ATSValueReference value = null;
    assignee = reference(localVars);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUALS:
      jj_consume_token(EQUALS);
      value = value(localVars);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(SCOL);
                if (value != null) {
                        {if (true) return new ATSAssociation(assignee, value);}
                } else {
                        //Method call...
                        {if (true) return assignee;}
                }
    throw new Error("Missing return statement in function");
  }

  final public ATSValueReference reference(ATSLocalVarsHelper localVars) throws ParseException {
        ATSValueReference assignee;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
    case NUM:
    case STRING:
      assignee = localVarDeclaration(localVars);
                {if (true) return assignee;}
      break;
    case MAP:
    case WORLD:
    case ATTACK:
    case PLAYER:
    case ACTOR:
    case ITEM:
    case IDENTIFIER:
      assignee = contextVarReference(localVars);
                {if (true) return assignee;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSValueReference localVarDeclaration(ATSLocalVarsHelper localVars) throws ParseException {
        Token id;
        int index;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      jj_consume_token(BOOL);
      id = jj_consume_token(IDENTIFIER);
                if (localVars.getLocalVar(id.image)!= null) {
                        {if (true) throw new ParseException("ATScript : Duplicate variable "+id.image+" at line "+id.beginLine+" column "+id.beginColumn);}
                }
                {if (true) return localVars.newBoolVariable(id.image);}
      break;
    case NUM:
      jj_consume_token(NUM);
      id = jj_consume_token(IDENTIFIER);
                if (localVars.getLocalVar(id.image)!= null) {
                        {if (true) throw new ParseException("ATScript : Duplicate variable "+id.image+" at line "+id.beginLine+" column "+id.beginColumn);}
                }
                {if (true) return localVars.newNumVariable(id.image);}
      break;
    case STRING:
      jj_consume_token(STRING);
      id = jj_consume_token(IDENTIFIER);
                if (localVars.getLocalVar(id.image)!=null) {
                        {if (true) throw new ParseException("ATScript : Duplicate variable "+id.image+" at line "+id.beginLine+" column "+id.beginColumn);}
                }
                {if (true) return localVars.newStringVariable(id.image);}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSValueReference contextVarReference(ATSLocalVarsHelper localVars) throws ParseException {
        ATSValueReference reference;
        Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAP:
      jj_consume_token(MAP);
      jj_consume_token(DOT);
      reference = mapReference(localVars);
                {if (true) return reference;}
      break;
    case ATTACK:
      jj_consume_token(ATTACK);
      jj_consume_token(DOT);
      reference = attackReference(localVars);
                {if (true) return reference;}
      break;
    case PLAYER:
      jj_consume_token(PLAYER);
      jj_consume_token(DOT);
      reference = playerReference(localVars);
                {if (true) return reference;}
      break;
    case ACTOR:
      jj_consume_token(ACTOR);
      jj_consume_token(DOT);
      reference = actorReference(localVars, new ATSContextObjectReference(ATSContextObjectReference.ContextObject.actor));
                {if (true) return reference;}
      break;
    case WORLD:
      jj_consume_token(WORLD);
      jj_consume_token(DOT);
      reference = worldReference(localVars);
                {if (true) return reference;}
      break;
    case ITEM:
      jj_consume_token(ITEM);
      jj_consume_token(DOT);
      reference = itemReference(localVars, new ATSContextObjectReference(ATSContextObjectReference.ContextObject.item));
                {if (true) return reference;}
      break;
    case IDENTIFIER:
      id = jj_consume_token(IDENTIFIER);
                ATSLocalVarReference var = localVars.getLocalVar(id.image);
                if (var == null) {
                        {if (true) throw new ParseException("Undeclared variable "+id.image+" at line"+id.beginLine+" column "+id.beginColumn);}
                }
                {if (true) return var;}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSExpression whileConstruct(ATSLocalVarsHelper localVars) throws ParseException {
        ATSExpression block;
        ATSValueReference condition;
    jj_consume_token(WHILE);
    jj_consume_token(LPAR);
    condition = value(localVars);
    jj_consume_token(RPAR);
    jj_consume_token(LBRAC);
    block = parseScope(localVars);
                {if (true) return new ATSWhileLoop(condition, block);}
    throw new Error("Missing return statement in function");
  }

  final public ATSExpression ifElseConstruct(ATSLocalVarsHelper localVars) throws ParseException {
        ATSExpression ifBlock, elseBlock=null;
        ATSValueReference ifCondition;
    jj_consume_token(IF);
    jj_consume_token(LPAR);
    ifCondition = value(localVars);
    jj_consume_token(RPAR);
    jj_consume_token(LBRAC);
    ifBlock = parseScope(localVars);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      elseBlock = elseBlock(localVars);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
                {if (true) return new ATSFlowControl(ifCondition,ifBlock,elseBlock);}
    throw new Error("Missing return statement in function");
  }

  final public ATSExpression elseBlock(ATSLocalVarsHelper localVars) throws ParseException {
        ATSExpression block;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRAC:
      jj_consume_token(LBRAC);
      block = parseScope(localVars);
                {if (true) return block;}
      break;
    case IF:
      block = ifElseConstruct(localVars);
                {if (true) return block;}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSExpression returnConstruct(ATSLocalVarsHelper localVars) throws ParseException {
        ATSValueReference value;
    jj_consume_token(RETURN);
    value = value(localVars);
                {if (true) return new ATSReturnStatement(value);}
    throw new Error("Missing return statement in function");
  }

  final public ATSValueReference value(ATSLocalVarsHelper localVars) throws ParseException {
        ATSValueReference reference;
        ATSPrimitiveOperation operation = null;
        Token tok;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAP:
    case WORLD:
    case ATTACK:
    case PLAYER:
    case ACTOR:
    case ITEM:
    case BOOL:
    case NUM:
    case STRING:
    case IDENTIFIER:
      reference = reference(localVars);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GOE:
      case LOE:
      case GT:
      case LT:
      case EQ:
      case PLUS:
      case MINUS:
      case MULTIPLY:
      case DIVIDE:
      case CONCAT:
      case AND:
      case OR:
        operation = valueOp(localVars, reference);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
                if (operation != null) {
                        {if (true) return operation;}
                } else {
                        {if (true) return reference;}
                }
      break;
    case NUMBER:
      tok = jj_consume_token(NUMBER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GOE:
      case LOE:
      case GT:
      case LT:
      case EQ:
      case PLUS:
      case MINUS:
      case MULTIPLY:
      case DIVIDE:
      case CONCAT:
      case AND:
      case OR:
        operation = valueOp(localVars, new ATSConstantReference(new Double(tok.image)));
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
                if (operation != null) {
                        {if (true) return operation;}
                } else {
                        {if (true) return new ATSConstantReference(new Double(tok.image));}
                }
      break;
    case LPAR:
      jj_consume_token(LPAR);
      reference = value(localVars);
      jj_consume_token(RPAR);
                {if (true) return reference;}
      break;
    case EXCLAM:
      jj_consume_token(EXCLAM);
      reference = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.not, null, reference);}
      break;
    case TRUE:
      jj_consume_token(TRUE);
                {if (true) return new ATSConstantReference(Boolean.TRUE);}
      break;
    case FALSE:
      jj_consume_token(FALSE);
                {if (true) return new ATSConstantReference(Boolean.FALSE);}
      break;
    case DQUO:
      jj_consume_token(DQUO);
      tok = jj_consume_token(LITERAL_VALUE);
      jj_consume_token(DQUOBIS);
                {if (true) return new ATSConstantReference(tok.image);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSPrimitiveOperation valueOp(ATSLocalVarsHelper localVars, ATSValueReference leftHand) throws ParseException {
        ATSValueReference value;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GT:
      jj_consume_token(GT);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.gt, leftHand, value);}
      break;
    case LT:
      jj_consume_token(LT);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.lt, leftHand, value);}
      break;
    case GOE:
      jj_consume_token(GOE);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.goe, leftHand, value);}
      break;
    case LOE:
      jj_consume_token(LOE);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.loe, leftHand, value);}
      break;
    case EQ:
      jj_consume_token(EQ);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.eq, leftHand, value);}
      break;
    case PLUS:
      jj_consume_token(PLUS);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.plus, leftHand, value);}
      break;
    case MINUS:
      jj_consume_token(MINUS);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.minus, leftHand, value);}
      break;
    case MULTIPLY:
      jj_consume_token(MULTIPLY);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.multiply, leftHand, value);}
      break;
    case DIVIDE:
      jj_consume_token(DIVIDE);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.divide, leftHand, value);}
      break;
    case CONCAT:
      jj_consume_token(CONCAT);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.concat, leftHand, value);}
      break;
    case AND:
      jj_consume_token(AND);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.and, leftHand, value);}
      break;
    case OR:
      jj_consume_token(OR);
      value = value(localVars);
                {if (true) return new ATSPrimitiveOperation(ATSPrimitiveOperation.Operator.or, leftHand, value);}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ATSValueReference mapReference(ATSLocalVarsHelper localVars) throws ParseException {
    jj_consume_token(OUTDOOR);
                {if (true) return new ATSObjectFieldReference(ATSObjectFieldReference.ObjectFields.mapOutdoor, null);}
    throw new Error("Missing return statement in function");
  }

  final public ATSValueReference attackReference(ATSLocalVarsHelper localVars) throws ParseException {
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  final public ATSValueReference playerReference(ATSLocalVarsHelper localVars) throws ParseException {
        ATSValueReference ref;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADDCONDITION:
    case CLEARCONDITION:
    case HP:
    case AP:
    case AC:
    case AD:
    case BC:
      ref = actorReference(localVars, new ATSContextObjectReference(ATSContextObjectReference.ContextObject.player));
                {if (true) return ref;}
      break;
    case BASE:
      jj_consume_token(BASE);
      jj_consume_token(DOT);
      ref = playerBaseReference(localVars, new ATSContextObjectReference(ATSContextObjectReference.ContextObject.player));
                {if (true) return ref;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

